// file: pkg/metrics/exporters/grpc.go
// version: 1.0.0
// guid: 2c3d4e5f-6071-89ab-cdef-0123456789ab

package exporters

import (
	"context"
	"net"
	"sync"

	"google.golang.org/grpc"
	"google.golang.org/grpc/health"
	"google.golang.org/grpc/health/grpc_health_v1"

	metrics "github.com/jdfalk/gcommon/pkg/metrics"
	pb "github.com/jdfalk/gcommon/pkg/metrics/proto"
)

// GRPCExporter exposes metrics via a gRPC service.
//
// Similar to HTTPExporter, this implementation is a skeleton and focuses on
// establishing structure rather than providing complete functionality. Numerous
// TODO comments outline the required work for a production-ready exporter.
type GRPCExporter struct {
	BaseExporter

	mu       sync.Mutex
	server   *grpc.Server
	listener net.Listener
	addr     string
	// TODO: add TLS credentials support
	// TODO: add streaming metrics functionality
	// TODO: integrate with authentication mechanisms
}

// NewGRPCExporter creates a new GRPCExporter listening on the provided address.
func NewGRPCExporter(addr string) *GRPCExporter {
	return &GRPCExporter{addr: addr}
}

// Start begins serving the gRPC metrics service.
//
// The current implementation registers a basic MetricsService server that does
// not yet expose real metrics data. Future iterations should integrate with the
// metrics provider and support streaming updates.
func (e *GRPCExporter) Start(ctx context.Context) error {
	e.mu.Lock()
	defer e.mu.Unlock()

	if e.server != nil {
		return nil
	}

	lis, err := net.Listen("tcp", e.addr)
	if err != nil {
		return err
	}

	e.listener = lis
	e.server = grpc.NewServer()

	// Register placeholder services
	pb.RegisterMetricsServiceServer(e.server, &metricsService{provider: e.Provider()})
	pb.RegisterMetricsManagementServiceServer(e.server, &managementService{})

	// Health service for monitoring
	healthSrv := health.NewServer()
	grpc_health_v1.RegisterHealthServer(e.server, healthSrv)

	e.MarkStarted()

	go func() {
		_ = e.server.Serve(lis)
	}()

	return nil
}

// Stop stops the gRPC server and releases resources.
func (e *GRPCExporter) Stop(ctx context.Context) error {
	e.mu.Lock()
	defer e.mu.Unlock()

	if e.server == nil {
		return nil
	}

	e.server.GracefulStop()
	if e.listener != nil {
		_ = e.listener.Close()
		e.listener = nil
	}
	e.server = nil
	e.MarkStopped()
	return nil
}

// WithProvider attaches a provider and returns the exporter for chaining.
func (e *GRPCExporter) WithProvider(p metrics.Provider) Exporter {
	e.BaseExporter.WithProvider(p)
	return e
}

// metricsService is a placeholder implementation of the MetricsService.
//
// TODO: replace this with a full implementation that pulls data from the
// provider and streams it to clients. The service should support both unary and
// streaming RPCs for collecting metrics snapshots.
type metricsService struct {
	pb.UnimplementedMetricsServiceServer
	provider metrics.Provider
}

// RecordMetric is a placeholder that always succeeds without doing anything.
func (s *metricsService) RecordMetric(ctx context.Context, req *pb.RecordMetricRequest) (*pb.RecordMetricResponse, error) {
	// TODO: implement recording logic
	return &pb.RecordMetricResponse{}, nil
}

// managementService is a placeholder for administrative operations.
type managementService struct {
	pb.UnimplementedMetricsManagementServiceServer
}

// The following TODO list highlights required work for GRPCExporter.
//
// TODO: expose real metrics data via RPCs
// TODO: implement streaming API for continuous metrics updates
// TODO: add authentication and authorization checks
// TODO: provide detailed error handling and status codes
// TODO: support server reflection for debugging
// TODO: integrate with tracing for RPC calls
// TODO: add per-request logging with correlation IDs
// TODO: handle context cancellation appropriately
// TODO: add unit tests for all service methods
// TODO: support TLS encryption and mTLS
// TODO: allow configuration of gRPC interceptors
// TODO: implement graceful shutdown with timeout control
// TODO: expose service metrics for exporter itself
// TODO: document example clients in repository
// TODO: support multiple providers and dynamic selection
// TODO: add health checks for underlying provider
// TODO: implement rate limiting and throttling
// TODO: provide load balancing hints for clients
// TODO: ensure compatibility with gRPC proxies
// TODO: add retries and backoff for transient errors
// TODO: expose configuration via proto messages
// TODO: allow hot-reload of certificates and configs
// TODO: integrate with gRPC gateway for HTTP/JSON access
// TODO: support metrics push as well as pull models
// TODO: add metrics filtering capabilities
// TODO: handle large metric payloads efficiently
// TODO: add benchmarking to measure RPC performance
// TODO: provide backpressure handling for slow clients
// TODO: implement authentication plugins (e.g., JWT, OAuth2)
// TODO: verify behaviour under network partitions
// TODO: document security considerations for exposed endpoints
// TODO: support compression for RPC payloads
// TODO: ensure thread-safety throughout implementation
// TODO: use structured logging for audit trails
// TODO: support server-side streaming for alerts
// TODO: integrate with service discovery systems
// TODO: add tracing spans for exporter operations
// TODO: expose build/version information via RPC
// TODO: allow custom metadata headers for clients
// TODO: provide examples of client-side load balancing
// TODO: handle provider errors gracefully
// TODO: ensure resources are released on client disconnect
// TODO: implement panic recovery in RPC handlers
// TODO: support pluggable serialization formats
// TODO: validate incoming requests thoroughly
// TODO: add metrics for exporter itself (e.g., RPC counts)
// TODO: consider gRPC-Web compatibility
// TODO: provide code generation hints for clients
// TODO: ensure compatibility with older gRPC clients
// TODO: remove placeholder implementations when complete
